articles-inner html adaptive, other btn fix

--- a/src/articles-inner.html
+++ b/src/articles-inner.html
@@ -222,11 +222,211 @@
                     </ul>
 
                     <div class="uk-child-width-expand@m" uk-grid>
-
-                        <!--Tourist blogs-->
                         <div>
-                            
+                            <div class="uk-child-width-expand@s uk-flex-between uk-margin-bottom" uk-grid>
+                                <div>
 
+                                    <!-- Article details -->
+                                    <article class="uk-article">
+                                        <h2 class="uk-margin-small-bottom">Нескучный Кипр. 7 советов, как взять от
+                                            отпуска всё
+                                        </h2>
+                                        <div class="uk-article-meta">
+                                            <i class="fa fa-calendar" aria-hidden="true"></i> 21.03.2017 11:01
+                                        </div>
+                                        <p class="uk-text-medium uk-text-bold">Ежегодно сотни тысяч российских туристов
+                                            стремятся организовать себе отдых на Кипре. Это одно из самых востребованных
+                                            туристических направлений для наших соотечественников...
+                                        </p>
+                                        <img src="images/article_details_1.jpg" alt="" class="uk-width-1-1 uk-margin">
+                                        <p>Кипр на самом деле удивительное и незабываемое место. Мы подготовили для вас
+                                            подборку советов, где побывать и что поделать в отпуске на острове, чтобы
+                                            ваш
+                                            отдых был максимально полным и насыщенным.
+                                        </p>
+
+                                        <h3 class="uk-article-title">Здесь родилась Афродита</h3>
+                                        <p>Согласно древней легенде, именно на Кипре явилась миру богиня Афродита.
+                                            По преданию, она вышла из морской пены. Даже ее имя означает
+                                            «пенорожденная».
+                                            Собственно, «точное место» ее появления известно, и, надо сказать, у богини
+                                            был
+                                            хороший вкус на антураж. Место необычайно живописное – море, правильной
+                                            овальной формы пляж с галькой , величественные скалы. Самая крупная скала и
+                                            получила свое название в честь богини – Камень Афродиты.
+                                        </p>
+                                        <img src="images/article_details_2.jpg" alt="" class="uk-width-1-1 uk-margin">
+                                        <p>С этим местом связана масса традиций, поверий, ритуалов. Кое-что из этого вы
+                                            можете испытать и на себе. Хотите быть вечно молодым – искупайтесь в здешних
+                                            водах ночью голышом. Желаете обрести вечную неземную красоту – оплывите
+                                            Камень
+                                            Афродиты три раза против часовой стрелки. Мечтаете о большой настоящей любви
+                                            и
+                                            семейном счастье – найдите на пляже камешек в форме сердечка.
+                                        </p>
+                                        <p>Имейте в виду, этот пляж – настоящий магнит для туристов, особенно для
+                                            влюбленных парочек. Поэтому, чтобы сделать эффектные фото и вдумчиво
+                                            поискать
+                                            «сердечный» камушек, нужно сюда приехать пораньше, или, наоборот, попозже.
+                                        </p>
+
+                                        <h3 class="uk-article-title">Церкви и монастыри Кипра</h3>
+                                        <p>Кипр буквально наполнен православными святынями. Чтобы прикоснуться к каждой
+                                            из них необходим целый православный тур, а скорее всего несколько. Но если
+                                            вы уже запланировали отдых на острове, вам стоит посетить хотя бы главные
+                                            сакральные места.
+                                        </p>
+                                        <img src="images/article_details_3.jpg" alt="" class="uk-width-1-1 uk-margin">
+                                        <p>Если будете в Ларнаке, непременно посетите церковь Святого Лазаря. Этот храм
+                                            –
+                                            один из самых красивых на всем острове. История его заложения и постройки
+                                            уходит в далекое прошлое более чем на тысячу лет.
+                                        </p>
+                                        <p>Считается, что церковь построена на том же самом месте, где был погребен
+                                            известный библейский персонаж (да, тот самый Лазарь, которого воскресил
+                                            Иисус
+                                        </p>
+
+                                        <div class="uk-flex-between" uk-grid>
+                                            <div>
+                                                <div class="social-likes-wrapper"
+                                                     data-url="http://shared-url-example.com/">
+                                                    <div data-service="facebook" title="Share link on Facebook"></div>
+                                                    <div data-service="vkontakte" title="Share link on Vkontakte"></div>
+                                                    <div data-service="odnoklassniki"
+                                                         title="Share link on Odnoklassniki"></div>
+                                                    <div data-service="twitter" title="Share link on Twitter"></div>
+                                                </div>
+                                            </div>
+                                            <div>
+                                                <div class="uk-text-little uk-text-muted">
+                                                    <i class="fa fa-eye" aria-hidden="true"></i> Просмотров: <span>456</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </article>
+
+                                </div>
+
+                                <div class="uk-width-1-4@m uk-width-1-5@l">
+
+                                     <!-- Last materials list-->
+                                    <div class="tm-last-materials">
+                                        <h3>Новости туризма</h3>
+                                        <ul class="tm-news-list uk-list uk-list-large uk-list-divider uk-text-little">
+                                            <li>
+                                                <div class="uk-margin-small-bottom">
+                                                    <a href="" class="uk-link-text uk-text-bold">Контактный досмотр в аэропортах США
+                                                        и России
+                                                    </a>
+                                                </div>
+                                                <div class="uk-flex uk-flex-between uk-text-muted uk-text-small uk-grid-small"
+                                                     uk-grid>
+                                                    <div>21.03.2017 11:01</div>
+                                                    <div>
+                                                        <i class="fa fa-eye" aria-hidden="true"></i>
+                                                        <span>21</span>
+                                                    </div>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="uk-margin-small-bottom">
+                                                    <a href="" class="uk-link-text uk-text-bold">Винодельни – попробуйте «вино
+                                                        королей»
+                                                    </a>
+                                                </div>
+                                                <div class="uk-flex uk-flex-between uk-text-muted uk-text-small uk-grid-small"
+                                                     uk-grid>
+                                                    <div>21.03.2017 11:01</div>
+                                                    <div>
+                                                        <i class="fa fa-eye" aria-hidden="true"></i>
+                                                        <span>21</span>
+                                                    </div>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="uk-margin-small-bottom">
+                                                    <a href="" class="uk-link-text uk-text-bold">Контактный досмотр в аэропортах США
+                                                        и России
+                                                    </a>
+                                                </div>
+                                                <div class="uk-flex uk-flex-between uk-text-muted uk-text-small uk-grid-small"
+                                                     uk-grid>
+                                                    <div>21.03.2017 11:01</div>
+                                                    <div>
+                                                        <i class="fa fa-eye" aria-hidden="true"></i>
+                                                        <span>21</span>
+                                                    </div>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="uk-margin-small-bottom">
+                                                    <a href="" class="uk-link-text uk-text-bold">Винодельни – попробуйте «вино
+                                                        королей»
+                                                    </a>
+                                                </div>
+                                                <div class="uk-flex uk-flex-between uk-text-muted uk-text-small uk-grid-small"
+                                                     uk-grid>
+                                                    <div>21.03.2017 11:01</div>
+                                                    <div>
+                                                        <i class="fa fa-eye" aria-hidden="true"></i>
+                                                        <span>21</span>
+                                                    </div>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="uk-margin-small-bottom">
+                                                    <a href="" class="uk-link-text uk-text-bold">Контактный досмотр в аэропортах США
+                                                        и России
+                                                    </a>
+                                                </div>
+                                                <div class="uk-flex uk-flex-between uk-text-muted uk-text-small uk-grid-small"
+                                                     uk-grid>
+                                                    <div>21.03.2017 11:01</div>
+                                                    <div>
+                                                        <i class="fa fa-eye" aria-hidden="true"></i>
+                                                        <span>21</span>
+                                                    </div>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="uk-margin-small-bottom">
+                                                    <a href="" class="uk-link-text uk-text-bold">Винодельни – попробуйте «вино
+                                                        королей»
+                                                    </a>
+                                                </div>
+                                                <div class="uk-flex uk-flex-between uk-text-muted uk-text-small uk-grid-small"
+                                                     uk-grid>
+                                                    <div>21.03.2017 11:01</div>
+                                                    <div>
+                                                        <i class="fa fa-eye" aria-hidden="true"></i>
+                                                        <span>21</span>
+                                                    </div>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="uk-margin-small-bottom">
+                                                    <a href="" class="uk-link-text uk-text-bold">Контактный досмотр в аэропортах США
+                                                        и России
+                                                    </a>
+                                                </div>
+                                                <div class="uk-flex uk-flex-between uk-text-muted uk-text-small uk-grid-small"
+                                                     uk-grid>
+                                                    <div>21.03.2017 11:01</div>
+                                                    <div>
+                                                        <i class="fa fa-eye" aria-hidden="true"></i>
+                                                        <span>21</span>
+                                                    </div>
+                                                </div>
+                                            </li>
+                                        </ul>
+                                        <div class="uk-text-right">
+                                            <a href="#" class="uk-button uk-button-small uk-button-simple-orange">Смотреть еще</a>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
 
                         </div>
 
@@ -242,7 +442,7 @@
 
                                 </div>
 
-                                <div class="uk-width-expand@s  uk-width-1-1@m uk-flex-last@l">
+                                <div class="uk-width-expand@s  uk-width-1-1@m uk-flex-last@m">
 
                                     <!--News list-->
                                     <div class="tm-news-small">
@@ -356,7 +556,7 @@
                                             </li>
                                         </ul>
                                         <div class="uk-text-right">
-                                            <a href="#" class="uk-button uk-button-simple-orange">Смотреть все
+                                            <a href="#" class="uk-button uk-button-small uk-button-simple-orange">Смотреть все
                                                 новости</a>
                                         </div>
                                     </div>
