--- a/src/blogs.html
+++ b/src/blogs.html
@@ -876,7 +876,7 @@
                                             </li>
                                         </ul>
                                         <div class="uk-text-right">
-                                            <a href="#" class="uk-button uk-button-simple-orange">Смотреть все
+                                            <a href="#" class="uk-button uk-button-small uk-button-simple-orange">Смотреть все
                                                 новости</a>
                                         </div>
                                     </div>
