--- a/src/visa-text.html
+++ b/src/visa-text.html
@@ -513,19 +513,14 @@
             <!-- Tourweek Tourism & Travel Articles -->
             <div class="uk-section uk-background-secondary uk-text-little">
                 <div class="uk-container uk-text-center">
-                    <div class="uk-width-4-5@l uk-margin-auto">
-                        <h2>Статьи о туризме и путешествиях от Tourweek</h2>
-                        <p>только полезная, достоверная и интересная информация из сферы отечественного и
-                            международного туризма! Ваш отдых будет полноценным, а поездка – увлекательной и полезной,
-                            если путешествие будет информационно подготовленным. И в этом вам помогут статьи,
-                            написанные нашими авторами.
-                        </p>
-                        <div class="uk-margin-medium-top uk-text-bold">
-                            <a href="#">
-                                Читать далее
-                                <i class="fa fa-angle-double-down" aria-hidden="true"></i>
-                            </a>
-                        </div>
+                    <h2>Статьи о туризме и путешествиях от Tourweek</h2>
+                    <p>только полезная, достоверная и интересная информация из сферы отечественного и
+                        международного туризма! Ваш отдых будет полноценным, а поездка – увлекательной и полезной,
+                        если путешествие будет информационно подготовленным. И в этом вам помогут статьи,
+                        написанные нашими авторами.
+                    </p>
+                    <div class="uk-margin-medium-top uk-text-bold">
+                        <a href="#">Читать далее <i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
