articles adaptive, fix dashed list

--- a/src/visas.html
+++ b/src/visas.html
@@ -342,7 +342,7 @@
                                     <div>
                                         <h3>Визы по странам</h3>
 
-                                        <ul class="tm-nav-divider uk-nav uk-margin-remove-bottom uk-background-muted">
+                                        <ul class="tm-nav-divider uk-nav uk-list-divider uk-margin-remove-bottom uk-background-muted">
                                             <li><a href="#">Австрия</a></li>
                                             <li><a href="#">Бельгия </a></li>
                                             <li><a href="#">Венгрия</a></li>
