--- a/src/photo.html
+++ b/src/photo.html
@@ -262,7 +262,7 @@
                                 </span>
                                 </div>
 
-                                <div class="uk-">
+                                <div class="uk-hidden@m">
                                     <a href="#"><i class="fa fa-question-circle" aria-hidden="true"></i> Как выбирается
                                         Фото дня</a>
                                 </div>
@@ -292,7 +292,7 @@
                                     </div>
                                 </div>
 
-                                <div class="uk-child-width-1-2@s uk-grid-small uk-margin-bottom" uk-grid>
+                                <div class="uk-child-width-1-2@s uk-grid-small" uk-grid>
                                     <div>
                                         <img src="images/photo_collage_header_medium_1.jpg" alt="" class="uk-width-1-1">
                                     </div>
@@ -341,6 +341,25 @@
                                     </div>
                                 </div>
 
+                                <div class="uk-hidden@m uk-flex uk-flex-wrap uk-flex-right uk-flex-middle uk-margin-top" uk-margin>
+                                    <a href="#"
+                                       class="uk-button uk-button-small uk-button-orange uk-margin-small-right">Добавить
+                                        фото</a>
+                                    <a href="#" class="uk-button uk-button-small uk-button-simple-orange">Смотреть все
+                                        фото</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="uk-visible@m uk-child-width-1-2@m uk-flex-middle uk-margin-bottom uk-grid-small" uk-grid>
+                            <div>
+                                <div>
+                                    <a href="#"><i class="fa fa-question-circle" aria-hidden="true"></i> Как выбирается
+                                        Фото дня</a>
+                                </div>
+                            </div>
+
+                            <div>
                                 <div class="uk-flex uk-flex-wrap uk-flex-right uk-flex-middle" uk-margin>
                                     <a href="#"
                                        class="uk-button uk-button-small uk-button-orange uk-margin-small-right">Добавить
