--- a/src/index.html
+++ b/src/index.html
@@ -439,7 +439,7 @@
                                 <h2>Поиск попутчиков в путешествие</h2>
                             </div>
                             <div class="uk-width-auto@m">
-                                <a href="#" class="uk-button uk-button-small uk-button-blue">Добавить объявление</a>
+                                <a href="#" class="uk-button uk-button uk-button-blue">Добавить объявление</a>
                             </div>
                         </div>
 
@@ -512,10 +512,10 @@
                                             <div class="uk-form-controls" uk-grid>
                                                 <div>
                                                     <input class="uk-hidden" type="checkbox" id="form-checkbox-with-photo" name="form-checkbox-with-photo">
-                                                    <label for="form-checkbox-with-photo" class="uk-button uk-button-small uk-button-simple-orange">С фото</label>
+                                                    <label for="form-checkbox-with-photo" class="uk-button uk-button-small uk-button-simple-orange tm-button-text-default">С фото</label>
                                                 </div>
                                                 <div>
-                                                    <a href="#" class="uk-button uk-button-small uk-button-orange uk-text-untransformed">Найти</a>
+                                                    <a href="#" class="uk-button uk-button-small uk-button-orange tm-button-text-default">Найти</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -672,7 +672,7 @@
                         </div>
 
                         <div class="uk-margin-medium-top uk-text-center">
-                            <a href="#" class="uk-button uk-button-simple-orange">Показать еще</a>
+                            <a href="#" class="uk-button uk-button-simple-orange tm-button-text-small">Показать еще</a>
                         </div>
                     </div>
                 </div>
@@ -822,7 +822,7 @@
                     </div>
 
                     <div class="uk-margin-medium-top uk-text-center">
-                        <a href="#" class="uk-button uk-button-simple-orange">Показать еще</a>
+                        <a href="#" class="uk-button uk-button-simple-orange tm-button-text-small">Показать еще</a>
                     </div>
                 </div>
             </div>
@@ -858,7 +858,7 @@
                     </div>
 
                     <div class="uk-margin-medium-top uk-text-center">
-                        <a href="#" class="uk-button uk-button-simple-orange">Перейти в фотогарелею</a>
+                        <a href="#" class="uk-button uk-button-simple-orange tm-button-text-small">Перейти в фотогарелею</a>
                     </div>
                 </div>
             </div>
@@ -897,7 +897,7 @@
                 <div class="uk-container uk-text-center">
                     <div class="uk-width-4-5@l uk-margin-auto">
                         <h2>О проекте</h2>
-                        <p>Tourweek – туристический портал, объединяющий в себе социальную сеть, путеводитель
+                        <p class="tm-line-height-big">Tourweek – туристический портал, объединяющий в себе социальную сеть, путеводитель
                             по 164 странам мира и множество полезных для путешественников сервисов. Мы не разглашаем,
                             не продаем, не передаем персональную информацию о пользователях третьим лицам. Все отчёты,
                             отзывы, рассказы и фотографии, опубликованные на сайте www.tourweek.ru являются
