--- a/src/articles.html
+++ b/src/articles.html
@@ -232,7 +232,7 @@
                             <form action="/" class="uk-search uk-width-1-1">
                                 <div class="uk-flex">
                                     <input class="uk-input" type="search" placeholder="Поиск">
-                                    <a href="#" class="uk-button uk-button-blue">
+                                    <a href="#" class="uk-button uk-button-small uk-button-blue">
                                         <i class="fa fa-search" aria-hidden="true"></i>
                                     </a>
                                 </div>
@@ -656,7 +656,7 @@
                                     <div>
                                         <h3>Статьи по странам</h3>
 
-                                        <ul class="tm-nav-divider uk-nav uk-list-divider uk-margin-remove-bottom">
+                                        <ul class="tm-nav-divider uk-nav uk-list-divider">
                                             <li class="uk-flex uk-flex-middle">
                                                 <a href="#" class="uk-margin-small-right">Вьетнам</a>
                                                 <span class="uk-text-small uk-text-muted">(<span class="tm-count-popular-country">368</span>)</span>
@@ -715,7 +715,7 @@
 
                                 </div>
 
-                                <div class="uk-width-auto@s uk-width-1-1@m">
+                                <div class="uk-width-auto@s uk-width-1-1@m uk-margin-medium-top">
 
                                     <!--Banner-->
                                     <a href="#" class="uk-card">
