photo grid fixes

--- a/src/photo.html
+++ b/src/photo.html
@@ -252,8 +252,8 @@
                             </div>
                         </div>
 
-                        <div class="uk-child-width-1-2@m uk-margin-bottom uk-grid-small" uk-grid>
-                            <div>
+                        <div class="uk-child-width-expand@m uk-margin-bottom uk-grid-small" uk-grid>
+                            <div class="uk-width-1-2@m uk-width-auto@l">
                                 <div class="uk-position-relative uk-margin-bottom">
                                     <img src="images/photo_collage_header_big.jpg" alt="" class="uk-width-1-1">
                                     <span class="uk-badge uk-position-bottom-left">
