photo grid fixes

--- a/src/photo.html
+++ b/src/photo.html
@@ -224,52 +224,24 @@
                     <!--Photo-->
                     <div>
                         <div class="uk-child-width-expand@m uk-margin-bottom uk-grid-small" uk-grid>
-                            <div>
-                                <h2 class="uk-text-uppercase">Фото стран, городов и курортов</h2>
-                            </div>
-
-                            <div class="uk-visible@m">
-                                <div class="uk-child-width-1-2@s uk-grid-small" uk-grid>
-                                    <div>
-                                        <h3>10 лучших фото</h3>
-                                    </div>
-
-                                    <div>
-
-                                        <!-- Search form -->
-                                        <form action="/" class="uk-search uk-width-1-1">
-                                            <div class="uk-form-controls uk-inline uk-width-1-1">
-                                            <span class="uk-form-icon uk-form-icon-flip">
-                                                <i class="fa fa-search" aria-hidden="true"></i>
-                                            </span>
-
-                                                <input class="uk-input" type="search" placeholder="Поиск фото">
-                                            </div>
-                                        </form>
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="uk-child-width-expand@m uk-margin-bottom uk-grid-small" uk-grid>
                             <div class="uk-width-1-2@m uk-width-auto@l">
-                                <div class="uk-position-relative uk-margin-bottom">
+                                <h2 class="uk-text-uppercase">Фото стран, городов и курортов</h2>
+                                <div class="uk-position-relative">
                                     <img src="images/photo_collage_header_big.jpg" alt="" class="uk-width-1-1">
                                     <span class="uk-badge uk-position-bottom-left">
-                                    <i class="fa fa-trophy uk-margin-small-right" aria-hidden="true"></i>
-                                    Фото дня
-                                </span>
+                                        <i class="fa fa-trophy uk-margin-small-right" aria-hidden="true"></i>
+                                        Фото дня
+                                    </span>
                                 </div>
 
-                                <div class="uk-hidden@m">
+                                <div class="uk-hidden@m uk-margin-top">
                                     <a href="#"><i class="fa fa-question-circle" aria-hidden="true"></i> Как выбирается
                                         Фото дня</a>
                                 </div>
                             </div>
 
                             <div>
-                                <div class="uk-hidden@m uk-margin-bottom">
+                                <div class="uk-margin-bottom">
                                     <div class="uk-child-width-1-2@s uk-grid-small" uk-grid>
                                         <div>
                                             <h3>10 лучших фото</h3>
