photo search fix

--- a/src/photo.html
+++ b/src/photo.html
@@ -234,7 +234,7 @@
                                     </span>
                                 </div>
 
-                                <div class="uk-hidden@m uk-margin-top">
+                                <div class="uk-hidden@m uk-margin-top uk-text-little">
                                     <a href="#"><i class="fa fa-question-circle" aria-hidden="true"></i> Как выбирается
                                         Фото дня</a>
                                 </div>
@@ -252,11 +252,11 @@
                                             <!-- Search form -->
                                             <form action="/" class="uk-search uk-width-1-1">
                                                 <div class="uk-form-controls uk-inline uk-width-1-1">
-                                            <span class="uk-form-icon uk-form-icon-flip">
-                                                <i class="fa fa-search" aria-hidden="true"></i>
-                                            </span>
+                                                    <span class="uk-form-icon uk-form-icon-flip uk-text-primary">
+                                                        <i class="fa fa-search" aria-hidden="true"></i>
+                                                    </span>
 
-                                                    <input class="uk-input" type="search" placeholder="Поиск фото">
+                                                    <input class="tm-input-shadow uk-input uk-text-little" type="search" placeholder="Поиск фото">
                                                 </div>
                                             </form>
 
@@ -325,7 +325,7 @@
 
                         <div class="uk-visible@m uk-child-width-1-2@m uk-flex-middle uk-margin-bottom uk-grid-small" uk-grid>
                             <div>
-                                <div>
+                                <div class="uk-text-little">
                                     <a href="#"><i class="fa fa-question-circle" aria-hidden="true"></i> Как выбирается
                                         Фото дня</a>
                                 </div>
