nav, subnav styles upd,  photo nav upd

--- a/src/photo.html
+++ b/src/photo.html
@@ -400,7 +400,7 @@
                                         <h3>Фотографии</h3>
                                     </div>
                                     <div>
-                                        <ul class="uk-subnav uk-subnav-pill uk-text-uppercase" uk-margin uk-switcher="connect: .tm-switcher-catalog">
+                                        <ul class="uk-subnav uk-subnav-pill uk-text-small uk-text-uppercase" uk-margin uk-switcher="connect: .tm-switcher-catalog">
                                             <li class="uk-active"><a href="#">по странам</a></li>
                                             <li><a href="#">по хештегам</a></li>
                                         </ul>
