form-icon upd,  forms upd

--- a/src/registration.html
+++ b/src/registration.html
@@ -231,8 +231,8 @@
                                 <div class="uk-child-width-expand uk-grid-large" uk-grid>
                                     <div class="uk-width-1-3@s uk-width-1-2@l">
                                         <label class="uk-form-label" for="form-input-login">Логин*:</label>
-                                        <div class="uk-text-little uk-text-muted">Логин используется для авторизации;
-                                            от 3 до 15 символов - цифры и/или английские буквы.
+                                        <div class="uk-text-little uk-text-muted">
+                                            <i>Логин используется для авторизации; от 3 до 15 символов - цифры и/или английские буквы.</i>
                                         </div>
                                     </div>
                                     <div>
@@ -245,8 +245,8 @@
                                 <div class="uk-child-width-expand uk-grid-large" uk-grid>
                                     <div class="uk-width-1-3@s uk-width-1-2@l">
                                         <label class="uk-form-label" for="form-input-email">Адрес e-mail*:</label>
-                                        <div class="uk-text-little uk-text-muted">Укажите реальный и действующий
-                                            e-mail адрес.
+                                        <div class="uk-text-little uk-text-muted">
+                                            <i>Укажите реальный и действующий e-mail адрес.</i>
                                         </div>
                                     </div>
                                     <div>
@@ -268,8 +268,8 @@
                                 <div class="uk-child-width-expand uk-grid-large" uk-grid>
                                     <div class="uk-width-1-3@s uk-width-1-2@l">
                                         <label class="uk-form-label" for="form-input-password">Пароль*:</label>
-                                        <div class="uk-text-little uk-text-muted">Задайте пароль от 6 до 12 символов,
-                                            используя цифры (0-9) или английские буквы (a-z). Например: 1234as
+                                        <div class="uk-text-little uk-text-muted">
+                                            <i>Задайте пароль от 6 до 12 символов, используя цифры (0-9) или английские буквы (a-z). Например: 1234as</i>
                                         </div>
                                     </div>
                                     <div>
@@ -305,8 +305,8 @@
                                 <div class="uk-child-width-expand uk-grid-large" uk-grid>
                                     <div class="uk-width-1-3@s uk-width-1-2@l">
                                         <label class="uk-form-label" for="form-input-username">Имя*:</label>
-                                        <div class="uk-text-little uk-text-muted">Укажите ваше настоящее имя,
-                                            до 22 символов.
+                                        <div class="uk-text-little uk-text-muted">
+                                            <i>Укажите ваше настоящее имя, до 22 символов.</i>
                                         </div>
                                     </div>
                                     <div>
@@ -321,7 +321,7 @@
                                         <label class="uk-form-label" for="form-select-birth">Дата рождения*:</label>
                                     </div>
                                     <div>
-                                        <div class="" uk-grid>
+                                        <div uk-grid>
                                             <div class="uk-width-expand">
                                                 <div class="uk-form-controls uk-inline uk-width-1-1">
                                                     <span class="uk-form-icon uk-form-icon-flip">
@@ -489,8 +489,8 @@
                                 <div class="uk-child-width-expand uk-grid-large" uk-grid>
                                     <div class="uk-width-1-3@s uk-width-1-2@l">
                                         <label class="uk-form-label" for="form-input-captcha">Защита от автоматической регистрации</label>
-                                        <div class="uk-text-little uk-text-muted">Введите символы, изображенные
-                                            на картинке *:
+                                        <div class="uk-text-little uk-text-muted">
+                                            <i>Введите символы, изображенные на картинке *:</i>
                                         </div>
                                     </div>
                                     <div>
@@ -507,7 +507,7 @@
 
                                 <hr>
 
-                                <div class="uk-child-width-expand uk-grid-large" uk-grid>
+                                <div class="uk-child-width-expand uk-grid-large uk-flex-middle" uk-grid>
                                     <div class="uk-width-1-3@s uk-width-1-2@l">
                                         <div class="uk-text-little">Создавая аккаунт в Tourweek, вы соглашаетесь с нашим
                                             <a href="#">Пользовательским соглашением</a>
