--- a/src/index.html
+++ b/src/index.html
@@ -467,7 +467,7 @@
                                                 <div class="uk-margin">
                                                     <label class="uk-form-label" for="form-input-place">Куда</label>
                                                     <div class="uk-form-controls uk-inline uk-width-1-1">
-                                                        <span class="uk-form-icon uk-form-icon-flip">ESP</span>
+                                                        <span class="uk-form-icon uk-form-icon-flip uk-text-muted">ESP</span>
                                                         <input class="uk-input" id="form-input-place" type="text"
                                                                placeholder="Мадрид">
                                                     </div>
