form-radio size upd

--- a/src/registration.html
+++ b/src/registration.html
@@ -293,7 +293,7 @@
                                         <label class="uk-form-label">Ваш пол*:</label>
                                     </div>
                                     <div>
-                                        <div class="uk-column-1-2">
+                                        <div class="uk-column-1-2 uk-text-little">
                                             <label><input class="uk-radio uk-margin-small-right" type="radio" name="radio-gender">Мужской</label>
                                             <label><input class="uk-radio uk-margin-small-right" type="radio" name="radio-gender">Женский</label>
                                         </div>
