forms upd html + styles

--- a/src/companions-add-listings.html
+++ b/src/companions-add-listings.html
@@ -227,7 +227,7 @@
                         <div>
                             <h2>Добавить объявление о поиске попутчика</h2>
 
-                            <form action="/" class="uk-padding uk-background-muted">
+                            <form action="/" class="tm-form-companions uk-padding uk-background-muted">
                                 <div class="uk-child-width-1-3@s uk-grid-small" uk-grid>
                                     <div>
                                         <div class="uk-margin">
@@ -280,6 +280,7 @@
 
                                 <div class="uk-margin">
                                     <label class="uk-form-label">Цель поездки  (Выберите до 3-х целей)</label>
+
                                     <div class="tm-checkbox-set uk-child-width-1-3@s uk-child-width-1-6@l uk-flex uk-flex-wrap">
                                         <div class="uk-form-controls">
                                             <input class="uk-hidden" type="checkbox" id="form-checkbox-target-1"
@@ -463,7 +464,7 @@
                                 <div class="uk-form-horizontal uk-margin">
                                     <label class="uk-form-label" for="form-input-drive-from">Едем в страну</label>
                                     <div class="uk-form-controls uk-panel uk-panel-scrollable uk-text-little uk-background-default">
-                                        <div class="uk-column-1-3@s uk-column-1-5@l" uk-margin>
+                                        <div class="uk-column-1-3@s uk-column-1-5@l">
                                             <label><input class="uk-checkbox uk-margin-small-right" type="checkbox">Все равно куда</label>
                                             <label><input class="uk-checkbox uk-margin-small-right" type="checkbox">Азербайджан</label>
                                             <label><input class="uk-checkbox uk-margin-small-right" type="checkbox">Армения</label>
@@ -571,7 +572,7 @@
 
                                 <hr>
 
-                                <div class="uk-margin">
+                                <div class="tm-form-social uk-margin">
                                     <label class="uk-form-label">Мои страницы в соцсетях:</label>
                                     <div class="uk-child-width-1-2@s uk-grid-small" uk-grid>
                                         <div>
