--- a/src/registration.html
+++ b/src/registration.html
@@ -221,13 +221,13 @@
                         <li><span>В мире</span></li>
                     </ul>
 
-                    <div class="uk-child-width-expand@m" uk-grid>
+                    <div class="uk-child-width-expand@l" uk-grid>
 
                         <!-- Add a search for a fellow traveler -->
                         <div>
                             <h2>Регистрация пользователя</h2>
 
-                            <form action="/" class="uk-padding uk-background-muted">
+                            <form action="/" class="tm-registration uk-padding uk-background-muted">
                                 <div class="uk-child-width-expand uk-grid-large" uk-grid>
                                     <div class="uk-width-1-3@s uk-width-1-2@l">
                                         <label class="uk-form-label" for="form-input-login">Логин*:</label>
