fonts smooth scroll

--- a/src/index.html
+++ b/src/index.html
@@ -219,7 +219,7 @@
                             <span class="uk-text-average">в путешествие</span>
                         </h1>
                         <div class="uk-margin-xlarge-bottom">
-                            <a href="" class="uk-button uk-button-large uk-button-blue">Начать поиск</a>
+                            <a href="#search-section" class="uk-button uk-button-large uk-button-blue">Начать поиск</a>
                         </div>
                         <ul class="tm-social uk-iconnav uk-flex-center uk-flex-middle uk-margin-medium-bottom">
                             <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
@@ -431,7 +431,7 @@
             </div>
 
             <!--Search for travel companions-->
-            <div class="uk-section uk-section-muted">
+            <div id="search-section" class="uk-section uk-section-muted">
                 <div class="uk-container">
                     <div>
                         <div class="uk-child-width-expand@m uk-grid-small uk-flex-between uk-flex-bottom uk-margin-bottom" uk-grid>
